# training_extensions

./: .codecov.yaml  .dockerignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  NOTICE  README.md  arrow_debug.py  config.yaml  docker-compose.dev.yaml  docker-compose.yaml  export_pretrained_models.py  install.ps1  install.sh  pyproject.toml  raw_values_wgisd_1.xlsx  raw_values_wgisd_2.xlsx  readme.md  run.sh  stable  third-party-programs.txt  tox.ini
application/backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  Justfile  geti-tune.spec  geti.spec  pyproject.toml  readme.md  run-e2e.sh  run.sh
application/backend/.github/: copilot-instructions.md
application/backend/app/: alembic.ini  cached_static_files.py  cli.py  db_seeder.py  lifecycle.py  main.py  scheduler.py  settings.py
application/backend/app/alembic/: env.py
application/backend/app/alembic/versions/: 1127bd7a7649_schema.py  2786b50eb5a4_schema.py  2d2b0c9a5c2c_schema.py  9b945d895014_schema.py  b62d0a0aac96_schema.py  ce7c6d4ae91b_schema.py  da385d690aae_schema.py
application/backend/app/api/: cached_utils.py  dependencies.py  io_utils.py  validators.py
application/backend/app/api/endpoints/: datasets.py  jobs.py  models.py  pipelines.py  projects.py  sinks.py  sources.py  training_configurations.py
application/backend/app/api/routers/: dataset_ie.py  dataset_revisions.py  datasets.py  jobs.py  license.py  media.py  model_architectures.py  models.py  pipelines.py  projects.py  sinks.py  sources.py  system.py  training_configurations.py  webrtc.py
application/backend/app/api/schemas/: __init__.py  (+19 more)
application/backend/app/configuration_tools/: __init__.py  configurable_parameters_converter.py  configuration_overlay_tools.py  training_configuration.py  training_configuration_converter.py  utils.py
application/backend/app/core/: __init__.py  lifecycle.py  scheduler.py
application/backend/app/datumaro_converter/: __init__.py  facade.py  samples.py
application/backend/app/db/: __init__.py  datetime.py  engine.py  migration.py  schema.py
application/backend/app/entities/: base.py  base_opencv_stream.py  images_folder_stream.py  ip_camera_stream.py  webcam_stream.py
application/backend/app/execution/: __init__.py  base.py  builders.py
application/backend/app/executors/: __init__.py  base.py
application/backend/app/models/: __init__.py  base.py  data_collection_policy.py  dataset.py  dataset_item.py  dataset_item_revision.py  dataset_revision.py  evaluation.py  inference.py  label.py  media.py  metrics.py  model_activation.py  model_architecture.py  model_manifest.py  model_revision.py  partial.py  pipeline.py  project.py  shape.py  sink.py  source.py  system.py  task.py  task_type.py  video_frame.py
application/backend/app/repositories/: __init__.py  active_model_repo.py  base.py  dataset_item_repo.py  dataset_revision_repo.py  evaluation_repo.py  filters.py  label_repo.py  media_repo.py  model_revision_repo.py  model_variant_repo.py  pipeline_repo.py  project_repo.py  sink_repo.py  source_repo.py  training_configuration_repo.py  video_frame_repo.py
application/backend/app/schemas/: __init__.py  base.py  dataset_item.py  job.py  label.py  model.py  model_activation.py  model_architecture.py  pipeline.py  project.py  shape.py  sink.py  source.py  system.py  training_configuration.py
application/backend/app/services/: __init__.py  active_model_service.py  active_pipeline_service.py  base.py  base_weights_service.py  configuration_service.py  dataset_revision_service.py  dataset_service.py  datumaro_converter.py  demo_files_service.py  dispatch_service.py  evaluation_service.py  inference_status_service.py  label_service.py  license_service.py  media_prediction_service.py  media_service.py  memory_estimation_service.py  metrics_service.py  model_manifest_service.py  model_service.py  parent_process_guard.py  pipeline_metrics_service.py  pipeline_service.py  project_service.py  sink_service.py  sink_status_service.py  source_service.py  source_status_service.py  staged_dataset_service.py  system_service.py  training_configuration_service.py  video_frame_service.py  video_stream_service.py
application/backend/app/static/: webrtc.html
application/backend/app/stream/: base_opencv_stream.py  images_folder_stream.py  ip_camera_stream.py  stream_data.py  usb_camera_stream.py  video_file_stream.py  video_stream.py  webcam_stream.py
application/backend/app/supported_models/: __init__.py  default_models.py  model_manifest.py  model_recommendations.py  parser.py  precompute_memory_footprints.py  supported_models.py
application/backend/app/utils/: __init__.py  color.py  images.py  ir_format.py  typing.py  visualization.py
application/backend/app/webrtc/: __init__.py  broadcaster.py  manager.py  sdp_handler.py  stream.py
application/backend/app/workers/: __init__.py  base.py  dispatching.py  inference.py  inference_server_monitor.py  shm_status.py  sink_status_holder.py  stream_loading.py
application/backend/pyinstaller/: fix_macho_signatures.py  pyi_rth_pkgmeta.py
application/backend/pyinstaller/windows/: certs.py  proxy.py  uwp.py
application/backend/tests/: conftest.py
application/backend/tests/bdd/: environment.py  images.py
application/backend/tests/benchmark/: test_inference_server.py  test_media_prediction_service.py  test_model_api.py  test_video_service.py
application/backend/tests/datumaro_integration/: conftest.py  test_datasets.py
application/backend/tests/integration/: conftest.py  project_builder.py  project_factory.py
application/backend/tests/unit/: conftest.py  test_cache_utils.py  test_cached_static_files.py  test_cached_utils.py  test_visualization.py
application/ui/src-tauri/: .gitignore  .taurignore  Cargo.toml  README.md  tauri.conf.json
application/ui/src-tauri/capabilities/: default.json
application/ui/src-tauri/icons/: icon.icns
application/ui/src-tauri/msix/: AppxManifest.xml
application/ui/src-tauri/src/: backend.rs  main.rs
(+6149 files in other folders)
