[project]
name = "geti-edge"
version = "0.1.0"
description = "Geti Edge"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi~=0.115.12",
    "fastrtc~=0.0.28",
    "openvino-model-api~=0.3.0.2",
    "opencv-python~=4.11",
    "pillow~=11.2",
    "python-multipart~=0.0.20",
    "uvicorn~=0.34.3",
    "psutil~=7.0.0",
    "anyio>=4.9.0",
]

[dependency-groups]
dev = [
    "ruff~=0.12.0",
    "mypy~=1.16.1",
]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [".venv*"]

[tool.ruff.lint]
select = ["ARG", "E", "F", "I", "N", "UP", "YTT", "ASYNC", "S", "COM", "C4", "FA", "PIE", "PYI", "Q", "RSE", "RET", "SIM",
    "TID", "TC", "PL", "RUF", "C90", "D103", "ANN001", "ANN201", "ANN205", "FAST"]
ignore = ["N801", "N805","N806","N807", "N818", "COM812", "RET503", "SIM108", "SIM105", "PLR2004",
    "RUF010", "TC001",  "RUF012"]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"*test*.py" = ["S", "ANN", "D", "ARG", "PLR"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pylint]
max-args=7

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
show_error_codes = true

