[project]
name = "geti-tune"
version = "0.1.0"
description = "Geti Tune"
readme = "readme.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "fastapi[standard]~=0.121.2",
    "hiyapyco==0.7.0",
    "openvino-model-api~=0.3.0.4",
    "pillow~=12.0",
    "python-multipart~=0.0.20",
    "uvicorn~=0.38.0",
    "psutil~=7.1.3",
    "pyyaml~=6.0.3",
    "openvino==2025.3.0",
    "watchdog==6.0.0",
    "sqlalchemy~=2.0.44",
    "alembic~=1.17.2",
    "aiofiles==25.1.0",
    "pydantic-settings~=2.12.0",
    "aiortc~=1.14.0",
    "datumaro[experimental] @ git+https://github.com/open-edge-platform/datumaro.git@develop",
    "scikit-learn~=1.7.2",
    "faster-coco-eval~=1.7.0",
    "scikit-multilearn~=0.2.0",
    "loguru~=0.7.3",
    "sse-starlette~=3.0.3",
]

[project.optional-dependencies]
# Choose one of the following training backends:
# - cpu: only CPU training (no GPU support)
# - xpu: support training on compatible Intel GPUs
# - cuda: support training on compatible NVIDIA GPUs
cpu = ["otx[cpu]"]
xpu = ["otx[xpu]"]
cuda = ["otx[cuda]"]

mqtt = [
    "paho-mqtt~=2.1.0",
]

[dependency-groups]
dev = [
    "testcontainers~=4.10.0",
    "pytest~=8.4",
    "pytest-asyncio~=1.1.0",
    "types-aiofiles==24.1.0.20240626",
    "time-machine~=2.19.0",
]
lint = [
    "ruff==0.11.13",
    "mypy~=1.16.1",
    "types-PyYAML~=6.0.12",
    "types-requests~=2.32.4",
]

[tool.uv]
default-groups = ["dev", "lint"]
required-version = "~=0.9.7"
conflicts = [
    [
        { extra = "cpu" },
        { extra = "xpu" },
        { extra = "cuda" },
    ],
    # redeclare library conflicts to workaround bug with uv dependency resolution
    # For details, see: https://github.com/astral-sh/uv/issues/9942
    [
        { package = "otx", extra = "cpu" },
        { package = "otx", extra = "xpu" },
        { package = "otx", extra = "cuda" },
    ],
]

[tool.uv.build-backend]
module-root = ""
module-name = "app"

[tool.uv.sources]
# TODO switch to local path after the 'feature/datumaro' branch is merged to develop
# otx = { path = "../../library", editable = true }
otx = { git = "https://github.com/open-edge-platform/training_extensions.git", branch = "feature/datumaro", subdirectory = "library" }

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [".venv*"]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = ["ARG", "E", "F", "I", "N", "UP", "YTT", "ASYNC", "S", "COM", "C4", "FA", "PIE", "PYI", "Q", "RSE", "RET", "SIM",
    "TID", "PL", "RUF", "C90", "D103", "ANN001", "ANN201", "ANN205"]
ignore = ["N801", "N805","N806","N807", "N818", "COM812", "RET503", "SIM108", "SIM105", "PLR2004",
    "RUF010", "RUF012", "CPY001", "PLE1205"]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"*test*.py" = ["S", "ANN", "D", "ARG", "PLR", "ASYNC"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pylint]
max-args=7

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
show_error_codes = true
disable_error_code = ["prop-decorator"] # Ignore error due to https://github.com/python/mypy/issues/14461

[tool.pytest.ini_options]
pythonpath = [
    "."
]
